<resources>
    <string name="app_name">Money++</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>

    <string name="title_section1">Inicio</string>
    <string name="title_section2">Calendario</string>
    <string name="title_section3">Estadísticas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="StringIngreso">Ingreso de Datos</string>
    <string name="Ingreso">Mas</string>
    <string name="ingresoStr">Ingreso</string>
    <string name="gastoStr">Gasto</string>
    <string name="actividades_str">Actividades del día de hoy</string>
    <string name="title_activity_ingresa_ingreso">Nuevo Ingreso</string>
    <string name="title_activity_ingresa_gasto">Nuevo Gasto</string>
    <string name="str_monto">Monto: </string>
    <string name="str_descripcion">Descripción:</string>
    <string name="str_fecha">Fecha:</string>
    <string name="str_dias">Días:</string>
    <string name="str_lunes">Lunes</string>
    <string name="str_martes">Martes</string>
    <string name="str_miercoles">Miércoles</string>
    <string name="str_jueves">Jueves</string>
    <string name="str_viernes">Viernes</string>
    <string name="str_sabado">Sábado</string>
    <string name="str_domingo">Domingo</string>
    <string name="str_fecha2">Segunda Fecha</string>
    <string name="str_semanal">Semanal</string>
    <string name="str_ingresar">Ingresar</string>
    <string name="str_reg_ingreso">Registrar ingreso</string>
    <string name="str_tipo">Tipo:</string>
    <string name="str_registra_gasto">Registrar Gasto</string>
    <string name="title_activity_resumen_dia">ResumenDia</string>
    <string name="str_quincenal">Quincenal</string>
    <string name="str_mensual">Mensual</string>
    <string name="title_activity_resumen_ingresos">ResumenIngresos</string>
    <string name="textviewingresos">Ingresos de</string>
    <string name="title_activity_resumen_gastos">ResumenGastos</string>
    <string name="textviewgastos">Gastos de</string>
    <string name="ahorroStr">Ahorro</string>
    <string name="title_activity_ingresa_ahorro">IngresaAhorro</string>
    <string name="strRegistraAhorro">Registrar ahorro</string>
    <string name="str_ruta">Ruta:</string>
    <string name="textviewahorros">Ahorros</string>
</resources>
