<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gastoStr"
            android:id="@+id/textViewGastoDiario"
            android:textStyle="normal"
            android:textSize="25sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editTextGastoDiario"
                android:layout_weight="1"
                android:background="#ffc3fbf0"
                android:layout_below="@+id/textViewGastoDiario"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/str_tipo"
            android:id="@+id/textView8"
            android:textStyle="normal"
            android:textSize="25sp"
            android:layout_below="@+id/editTextGastoDiario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:id="@+id/spinnerGastoDiario"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dialog"
            android:layout_below="@+id/textView8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/str_descripcion"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:layout_below="@+id/spinnerGastoDiario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDescGastoDiario"
                android:layout_weight="1"
                android:background="#ffc3fbf0"
                android:inputType="text"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/str_dias"
            android:id="@+id/textViewDias"
            android:textSize="25dp"
            android:layout_below="@+id/editTextDescGastoDiario"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tableLayout2"
            android:layout_below="@+id/textViewDias"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_lunes"
                    android:id="@+id/checkBoxLunesGasto"
                    android:layout_column="1"
                    android:checked="false"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_martes"
                    android:id="@+id/checkBoxMartesGasto"
                    android:layout_column="3"
                    android:checked="false"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_miercoles"
                    android:id="@+id/checkBoxMiercolesGasto"
                    android:layout_column="5"
                    android:checked="false"
                    android:layout_weight="1.1" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_jueves"
                    android:id="@+id/checkBoxJuevesGasto"
                    android:layout_column="7"
                    android:checked="false"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_viernes"
                    android:id="@+id/checkBoxViernesGasto"
                    android:layout_column="8"
                    android:checked="false"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_sabado"
                    android:id="@+id/checkBoxSabadoGasto"
                    android:layout_column="13"
                    android:checked="false"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_domingo"
                    android:id="@+id/checkBoxDomingoGasto"
                    android:layout_column="16"
                    android:checked="false"
                    android:layout_weight="1" />
            </TableRow>
        </TableLayout>


    <Button
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:text="@string/str_registra_gasto"
        android:id="@+id/buttonGastoDiario"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_corners_normal"
        android:layout_below="@+id/tableLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp" />

</RelativeLayout>