<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/fondo"
    android:focusableInTouchMode="false">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextMontoAU"
        android:layout_weight="0.06"
        android:background="#ffc7ccfb"
        android:layout_below="@+id/textViewMontoAU"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDescripcionAU"
        android:layout_gravity="center_horizontal"
        android:background="#ffc7ccfb"
        android:inputType="text"
        android:ems="10"
        android:layout_weight="0.06"
        android:layout_below="@+id/textViewDescAU"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_monto"
        android:id="@+id/textViewMontoAU"
        android:textStyle="normal"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_descripcion"
        android:id="@+id/textViewDescAU"
        android:textStyle="normal"
        android:textSize="25sp"
        android:layout_below="@+id/editTextMontoAU"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_fecha"
        android:id="@+id/textViewFechaAU"
        android:textStyle="normal"
        android:textSize="25sp"
        android:layout_below="@+id/editTextDescripcionAU"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextFechaAU"
        android:layout_weight="0.06"
        android:background="#ffc7ccfb"
        android:layout_below="@+id/textViewFechaAU"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:focusableInTouchMode="false"
        android:focusable="false"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strRegistraAhorro"
        android:id="@+id/buttonAhorroUnico"
        android:background="@drawable/round_corners_normal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>